--- a/MauiAppMinhasCompras/Views/ListaProduto.xaml
+++ b/MauiAppMinhasCompras/Views/ListaProduto.xaml
@@ -36,11 +36,23 @@
                             <Label Grid.Column="3" Text="{Binding Quantidade}" />
                             <Label Grid.Column="4" Text="{Binding Total}" />
                         </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
+                         </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <ViewCell.ContextActions>
+                            <MenuItem Text="Remover" Clicked="MenuItem_Clicked" />
+                        </ViewCell.ContextActions>
+                        <Grid ColumnDefinitions="*, *, *, *, *">
+                            <Label Grid.Column="0" Text="{Binding Id}" />
+                            <Label Grid.Column="1" Text="{Binding Descricao}" />
+                            <Label Grid.Column="2" Text="{Binding Preco}" />
+                            <Label Grid.Column="3" Text="{Binding Quantidade}" />
+                            <Label Grid.Column="4" Text="{Binding Total}" />
+                                    </Grid>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
         </ListView>
-    </VerticalStackLayout>
-</ContentPage>
     </VerticalStackLayout>
 </ContentPage>
